fix: code block word wrap on printing

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -218,6 +218,13 @@ body.md-reader {
       &__button-wrap {
         display: none;
       }
+      &__body {
+        .md-reader__markdown-content {
+          pre.hljs-pre .hljs {
+            white-space: pre-wrap;
+          }
+        }
+      }
     }
   }
 
